# Nima-Cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
Source/: Actor.cpp  Actor.hpp  ActorAxisConstraint.cpp  ActorAxisConstraint.hpp  ActorBone.cpp  ActorBone.hpp  ActorBoneBase.cpp  ActorBoneBase.hpp  ActorCollider.cpp  ActorCollider.hpp  ActorComponent.cpp  ActorComponent.hpp  ActorConstraint.cpp  ActorConstraint.hpp  ActorDistanceConstraint.cpp  ActorDistanceConstraint.hpp  ActorIKConstraint.cpp  ActorIKConstraint.hpp  ActorIKTarget.cpp  ActorIKTarget.hpp  ActorImage.cpp  ActorImage.hpp  ActorJellyBone.cpp  ActorJellyBone.hpp  ActorNode.cpp  ActorNode.hpp  ActorNodeSolo.cpp  ActorRootBone.cpp  ActorRotationConstraint.cpp  ActorRotationConstraint.hpp  ActorScaleConstraint.cpp  ActorScaleConstraint.hpp  ActorTargetedConstraint.cpp  ActorTargetedConstraint.hpp  ActorTransformConstraint.cpp  ActorTransformConstraint.hpp  ActorTranslationConstraint.cpp  ActorTranslationConstraint.hpp  BinaryReader.cpp  BinaryReader.hpp  (+11 more)
Source/Animation/: ActorAnimation.cpp  ActorAnimation.hpp  ComponentAnimation.cpp  ComponentAnimation.hpp  CubicSolver.hpp  KeyFrame.cpp  KeyFrame.hpp  NodeAnimation.cpp  NodeAnimation.hpp  PropertyAnimation.cpp  PropertyAnimation.hpp
Source/Animation/Interpolators/: CubicSolver.cpp
Source/Animation/KeyFrames/: KeyFrame.cpp  KeyFrame.hpp  KeyFrameActiveChild.cpp  KeyFrameCustomProperty.cpp  KeyFrameCustomProperty.hpp  KeyFrameDrawOrder.cpp  KeyFrameDrawOrder.hpp  KeyFrameIKStrength.cpp  KeyFrameIKStrength.hpp  KeyFrameLength.cpp  KeyFrameLength.hpp  KeyFrameNumeric.cpp  KeyFrameNumeric.hpp  KeyFrameOpacity.cpp  KeyFrameOpacity.hpp  KeyFramePosX.cpp  KeyFramePosX.hpp  KeyFramePosY.cpp  KeyFramePosY.hpp  KeyFrameRotation.cpp  KeyFrameRotation.hpp  KeyFrameScaleX.cpp  KeyFrameScaleX.hpp  KeyFrameScaleY.cpp  KeyFrameScaleY.hpp  KeyFrameSequence.cpp  KeyFrameVertexDeform.cpp  KeyFrameVertexDeform.hpp  KeyFrameWithInterpolation.cpp  KeyFrameWithInterpolation.hpp
